--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,15 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #1e1e1e;
     color: #cfcfcf;
     font-family: Arial, sans-serif;
+}
+
+h1 {
+    text-align: center;
 }
 
 .container {
@@ -10,14 +18,13 @@ body {
     padding: 20px;
     background-color: #333;
     border-radius: 8px;
-}
-
-h1 {
-    text-align: center;
+    display: flex;
+    flex-direction: row;
 }
 
 .input-section, .output-section {
     margin: 20px 0;
+    flex: 1;
 }
 
 label {
@@ -46,8 +53,7 @@ button:hover {
 }
 
 #map-container {
-    text-align: center;
-    margin-bottom: 20px;
+    flex: 1;
 }
 
 #results {
@@ -59,3 +65,22 @@ button:hover {
 #results p {
     margin: 10px 0;
 }
+
+.content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.index-container {
+    max-width: 800px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #333;
+    border-radius: 8px;
+}
+
+.index-input-section, .index-output-section {
+    margin: 20px 0;
+}
+
